@@ -52,7 +52,7 @@
 #  undef interface
 #endif
 
-static char usbbuf[USBDEV_MAX_XFER];
+static char usbbuf[USBDEV_MAX_XFER_MKII];
 static int buflen = -1, bufptr;
 
 static int usb_interface;
@@ -102,6 +102,9 @@ static int usbdev_open(char * port, long baud, union filedescriptor *fd)
 	  exit(1);
 	}
     }
+
+  if (fd->usb.max_xfer == 0)
+    fd->usb.max_xfer = USBDEV_MAX_XFER_MKII;
 
   usb_init();
 
@@ -199,32 +202,34 @@ static int usbdev_open(char * port, long baud, union filedescriptor *fd)
 		    }
 
 		  fd->usb.handle = udev;
-		  fd->usb.ep = -1;
-		  /* Try finding out what our read endpoint is. */
-		  for (i = 0; i < dev->config[0].interface[0].altsetting[0].bNumEndpoints; i++)
+		  if (fd->usb.rep == 0)
+		  {
+		    /* Try finding out what our read endpoint is. */
+		    for (i = 0; i < dev->config[0].interface[0].altsetting[0].bNumEndpoints; i++)
 		    {
 		      int possible_ep = dev->config[0].interface[0].altsetting[0].
-		      endpoint[i].bEndpointAddress;
+			endpoint[i].bEndpointAddress;
 
 		      if ((possible_ep & USB_ENDPOINT_DIR_MASK) != 0)
+		      {
+			if (verbose > 1)
 			{
-			  if (verbose > 1)
-			    {
-			      fprintf(stderr,
-				      "%s: usbdev_open(): using read endpoint 0x%02x\n",
-				      progname, possible_ep);
-			    }
-			  fd->usb.ep = possible_ep;
-			  break;
+			  fprintf(stderr,
+				  "%s: usbdev_open(): using read endpoint 0x%02x\n",
+				  progname, possible_ep);
 			}
+			fd->usb.rep = possible_ep;
+			break;
+		      }
 		    }
-		  if (fd->usb.ep == -1)
+		    if (fd->usb.rep == 0)
 		    {
 		      fprintf(stderr,
 			      "%s: usbdev_open(): cannot find a read endpoint, using 0x%02x\n",
-			      progname, USBDEV_BULK_EP_READ);
-		      fd->usb.ep = USBDEV_BULK_EP_READ;
+			      progname, USBDEV_BULK_EP_READ_MKII);
+		      fd->usb.rep = USBDEV_BULK_EP_READ_MKII;
 		    }
+		  }
                   return 0;
 		}
 	      trynext:
@@ -273,8 +278,8 @@ static int usbdev_send(union filedescriptor *fd, unsigned char *bp, size_t mlen)
    * 0.
    */
   do {
-    tx_size = (mlen < USBDEV_MAX_XFER)? mlen: USBDEV_MAX_XFER;
-    rv = usb_bulk_write(udev, USBDEV_BULK_EP_WRITE, (char *)bp, tx_size, 100000);
+    tx_size = (mlen < fd->usb.max_xfer)? mlen: fd->usb.max_xfer;
+    rv = usb_bulk_write(udev, fd->usb.wep, (char *)bp, tx_size, 100000);
     if (rv != tx_size)
     {
         fprintf(stderr, "%s: usbdev_send(): wrote %d out of %d bytes, err = %s\n",
@@ -283,7 +288,7 @@ static int usbdev_send(union filedescriptor *fd, unsigned char *bp, size_t mlen)
     }
     bp += tx_size;
     mlen -= tx_size;
-  } while (tx_size == USBDEV_MAX_XFER);
+  } while (tx_size == fd->usb.max_xfer);
 
   if (verbose > 3)
   {
@@ -316,11 +321,11 @@ static int usbdev_send(union filedescriptor *fd, unsigned char *bp, size_t mlen)
  * empty and more data are requested.
  */
 static int
-usb_fill_buf(usb_dev_handle *udev, int ep)
+usb_fill_buf(usb_dev_handle *udev, int maxsize, int ep)
 {
   int rv;
 
-  rv = usb_bulk_read(udev, ep, usbbuf, USBDEV_MAX_XFER, 100000);
+  rv = usb_bulk_read(udev, ep, usbbuf, maxsize, 100000);
   if (rv < 0)
     {
       if (verbose > 1)
@@ -345,7 +350,7 @@ static int usbdev_recv(union filedescriptor *fd, unsigned char *buf, size_t nbyt
     {
       if (buflen <= bufptr)
 	{
-	  if (usb_fill_buf(udev, fd->usb.ep) < 0)
+	  if (usb_fill_buf(udev, fd->usb.max_xfer, fd->usb.rep) < 0)
 	    return -1;
 	}
       amnt = buflen - bufptr > nbytes? nbytes: buflen - bufptr;
@@ -397,8 +402,8 @@ static int usbdev_recv_frame(union filedescriptor *fd, unsigned char *buf, size_
   n = 0;
   do
     {
-      rv = usb_bulk_read(udev, fd->usb.ep, usbbuf,
-			 USBDEV_MAX_XFER, 100000);
+      rv = usb_bulk_read(udev, fd->usb.rep, usbbuf,
+			 fd->usb.max_xfer, 100000);
       if (rv < 0)
 	{
 	  if (verbose > 1)
@@ -416,7 +421,7 @@ static int usbdev_recv_frame(union filedescriptor *fd, unsigned char *buf, size_
       n += rv;
       nbytes -= rv;
     }
-  while (rv == USBDEV_MAX_XFER);
+  while (rv == fd->usb.max_xfer);
 
   if (nbytes < 0)
     return -1;
@@ -450,7 +455,7 @@ static int usbdev_drain(union filedescriptor *fd, int display)
   int rv;
 
   do {
-    rv = usb_bulk_read(udev, fd->usb.ep, usbbuf, USBDEV_MAX_XFER, 100);
+    rv = usb_bulk_read(udev, fd->usb.rep, usbbuf, fd->usb.max_xfer, 100);
     if (rv > 0 && verbose >= 4)
       fprintf(stderr, "%s: usbdev_drain(): flushed %d characters\n",
 	      progname, rv);
